--- a/index.html
+++ b/index.html
@@ -132,13 +132,7 @@
            <span style="color:#ff2200;padding-left:0.5rem;">期待更多More++</span></div>
     </li>
   </ul>
-
-
-  
 </div>
-
-
-
 
 <div class="fat-footer">
   <div class="wrapper">
@@ -160,6 +154,19 @@
     <div class="split__title"> © 2016 by 黑木崖. All rights reserved. </div>
     友情链接: <a href="http://www.lm1998.cn" target="_blank">青海藜麦</a> </div>
 </footer>
-
+<script>
+(function(){
+ var bp = document.createElement('script');
+ var curProtocol = window.location.protocol.split(':')[0];
+ if (curProtocol === 'https') {
+ bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+ }
+ else {
+ bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+ }
+ var s = document.getElementsByTagName("script")[0];
+ s.parentNode.insertBefore(bp, s);
+})();
+</script>
 </body>
 </html>
